test/conformance/chainsaw/policy-validation/cluster-policy/invalid-pod-security-exceptions/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: invalid-pod-security-exceptions
spec:
  concurrent: false
  steps:
    - name: Apply the first policy exception
      try:
        - script:
            content: kubectl apply -f exception-1.yaml
            check:
              ($error != null): true
              (contains($stderr, 'denied the request')): true
              (contains($stderr, 'exclude.images must be specified')): true
              (contains($stderr, 'Capabilities')): true
              (contains($stderr, 'Privilege Escalation')): true
    - name: Apply the second policy exception
      try:
        - script:
            content: kubectl apply -f exception-2.yaml
            check:
              ($error != null): true
              (contains($stderr, 'denied the request')): true
              (contains($stderr, 'spec.podSecurity[0].values')): true
              (contains($stderr, 'values is required')): true
    - name: Apply the third policy exception
      try:
        - script:
            content: kubectl apply -f exception-3.yaml
            check:
              ($error != null): true
              (contains($stderr, 'denied the request')): true
              (contains($stderr, 'spec.podSecurity[0].restrictedField')): true
              (contains($stderr, 'restrictedField is required')): true
